# Botnet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  render.yaml  research_analysis.md  simple-client.ps1  test-client-powershell.ps1  test-client-windows.bat
bot-client/: CMakeLists.txt
bot-client/deploy/: LICENSE.txt  README.txt  build-all-platforms.bat  build-all-platforms.sh
bot-client/src/: bot_client.h  main.cpp
bot-client/src/attacks/: attack_manager.h
bot-client/src/commands/: command_processor.h
bot-client/src/communication/: c2_client.h
bot-client/src/config/: configuration.h
bot-client/src/ethics/: ethical_controller.h
bot-client/src/evasion/: anti_forensics.h  vm_detection.h
bot-client/src/persistence/: advanced_persistence.h  persistence_manager.h
bot-client/src/security/: encryption_manager.h  security_bypass.h
bot-client/src/stealth/: stealth_manager.h
c2-server/docker/: Dockerfile  entrypoint.sh  healthcheck.sh
c2-server/docker/configs/: c2_server.conf
c2-server/python-server/: server.py
c2-server/scripts/: deploy.sh
c2-server/src/: c2_server.h
c2-server/src/database/: database_manager.h
c2-server/web-dashboard/: index.html
c2-server/web-dashboard/js/: api.js  charts.js  dashboard.js  maps.js
client-deployment/: README.md  deploy-to-live-server.sh  quick-deploy.md
cloud-deployment/: README.md  deploy-cloud.sh
cloud-deployment/aws/: cloudformation.yml  docker-compose.aws.yml
cloud-deployment/render/: render.yaml
common/: CMakeLists.txt
common/crypto/: encryption.h
common/protocol/: dns_tunnel.h  http_client.h  message.h  packet_handler.h  websocket_client.h
common/utils/: platform_utils.h
docs/: README.md
docs/architecture/: COMMUNICATION_PROTOCOL.md  DOCKER_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/ethics/: ETHICAL_GUIDELINES.md  LEGAL_DISCLAIMERS.md
tests/integration/: test_system_integration.cpp
tests/unit/: test_framework.h
